🎨 style(index-page.module.scss): add z-index to img tag to fix overlapping issue 🚀 chore(page.tsx): add ExternalLink component to wrap links and improve accessibility 🎉 feat(page.tsx): add Portfolio section with employer, position, project, manager, and achievements details 🌟 feat(page.tsx): add Image component to display employer logos and author photo in Portfolio section

--- a/apps/profile/src/app/index-page.module.scss
+++ b/apps/profile/src/app/index-page.module.scss
@@ -3,7 +3,13 @@
     flex-direction: column;
     gap: 24px;
 
+    & img {
+        z-index: -1;
+    }
+
     & section {
+        position: relative;
+
         & :global(.key) {
             display: inline-block;
             width: 150px;
